// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort parameters tests Query with incorrect sort direction 1`] = `
"{
  jcr {
    searches(siteKey: \\"fake\\", language: \\"fake\\", workspace: fake) {
      search(searchInput: {searchCriteria: {text: \\"undefined\\"}, nodeTypeCriteria: {nodeType: \\"fake\\"}, limit: 5, offset: 0}) {
        totalHits
        took
        facets {
          field
          type
          data {
            count
            value
          }
        }
        hits {
          link
          displayableName
          excerpt
          score
          node {
            uuid
            jcr_created: property(name: \\"jcr:created\\") {
              value
            }
          }
        }
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query with incorrect sort field 1`] = `
"{
  jcr {
    searches(siteKey: \\"fake\\", language: \\"fake\\", workspace: fake) {
      search(searchInput: {searchCriteria: {text: \\"undefined\\"}, nodeTypeCriteria: {nodeType: \\"fake\\"}, limit: 5, offset: 0}) {
        totalHits
        took
        facets {
          field
          type
          data {
            count
            value
          }
        }
        hits {
          link
          displayableName
          excerpt
          score
          node {
            uuid
            jcr_created: property(name: \\"jcr:created\\") {
              value
            }
          }
        }
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query with sort 1`] = `
"{
  jcr {
    searches(siteKey: \\"fake\\", language: \\"fake\\", workspace: fake) {
      search(searchInput: {searchCriteria: {text: \\"undefined\\"}, nodeTypeCriteria: {nodeType: \\"fake\\"}, limit: 5, offset: 0}, sortBy: {orderType: ASC, property: \\"jcr:title\\"}) {
        totalHits
        took
        facets {
          field
          type
          data {
            count
            value
          }
        }
        hits {
          link
          displayableName
          excerpt
          score
          node {
            uuid
            jcr_created: property(name: \\"jcr:created\\") {
              value
            }
          }
        }
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query without sort 1`] = `
"{
  jcr {
    searches(siteKey: \\"fake\\", language: \\"fake\\", workspace: fake) {
      search(searchInput: {searchCriteria: {text: \\"undefined\\"}, nodeTypeCriteria: {nodeType: \\"fake\\"}, limit: 5, offset: 0}) {
        totalHits
        took
        facets {
          field
          type
          data {
            count
            value
          }
        }
        hits {
          link
          displayableName
          excerpt
          score
          node {
            uuid
            jcr_created: property(name: \\"jcr:created\\") {
              value
            }
          }
        }
      }
    }
  }
}
"
`;
